--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,17 @@ node_js:
 branches:
   only:
     - master
-addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
-      - google-chrome-beta
+# addons:
+#   apt:
+#     sources:
+#       - google-chrome
+#     packages:
+#       - google-chrome-stable
+#       - google-chrome-beta
 
 before_install:
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
+  # - export CHROME_BIN=chromium-browser
+  # - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 
 before_script:
@@ -24,8 +24,8 @@ before_script:
 
 script :
   - npm run lint
-  - ng test --single-run
-  - npm run e2e
+  # - ng test --single-run
+  # - npm run e2e
   - nmp run build
 
 after_success:
