--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script :
   - npm run lint
   # - ng test --single-run
   # - npm run e2e
-  - nmp run build
+  - npm run build
 
 after_success:
   - firebase deploy --token $FIREBASE_TOKEN --non-interactive
